css/custom.css
@font-face {
    font-family: BrandonGrotesqueBlk;
    src: url(../fonts/BrandonGrotesque-Black.ttf);
}
@font-face {
    font-family: BrandonGrotesqueBold;
    src: url(../fonts/BrandonGrotesque-Bold.ttf);
}
@font-face {
    font-family: BrandonGrotesqueLight;
    src: url(../fonts/BrandonGrotesque-Light.ttf);
}
@font-face {
    font-family: BrandonGrotesqueMed;
    src: url(../fonts/BrandonGrotesque-Medium.ttf);
}

/* Move down content because we have a fixed navbar that is 50px tall */
html, body{
  height:100%;
  background-color: #f5f5f5;
  width:100%;
  font-family: 'BrandonGrotesqueLight', "Helvetica Neue", courier, sans-serif;
}

.row{
    margin: 0;
}

body {
  padding-top: 50px;
}

ul.nav, .jumbotron h1{
	font-family: 'BrandonGrotesqueLight', "Helvetica Neue", courier, sans-serif;
}
.jumbotron {
	text-align: center;
	margin-bottom: 0px;
    padding:0;
}

ul.nav {
	font-size: 14px;
}

.jumbotron h1{
	margin-top: 0px;
	margin-bottom: 50px;
	color:white;
}

.jumbotron p{
	margin-bottom: 30px;
	color:white;
	font-weight: 100;
}

.btn-lg{
	font-size: 24px;
}

.col-md-4{
	padding: 10px 20px 0px 20px;
}

.homepage {
	text-align: center;
	padding: 70px 0;
}

.homepage img{
    max-width: 500px;
}
.homepage p{
    font-family: 'BrandonGrotesqueMed', Helvetica, sans-serif;
}
.homepage h2, .homepage h3{
    font-family: 'BrandonGrotesqueBold', courier, sans-serif;
    color:#e74c3c;
	text-transform: uppercase;
}

.homepage h2{
	font-size: 30px;
}
.homepage h3{
	font-size: 26px;
}

.button{
	background-color:#e74c3c;
    border-radius: 20px;
    border:none;
    outline: none;
}
.homepage a{
    color: #f5f5f5;
}
.homepage a:hover{
	text-decoration: none;
}

#button_action{
    padding: 10px 50px;
    font-size: 17px;
}
#button_project{
    padding: 10px 30px;
    font-size: 14px;
}

#project_buttons{
    padding-top: 40px;
}

.homepage hr{
	border-color: #e74c3c;
	width: 160px;
	margin-bottom: 30px;
}

.homepage p{
	font-size: 21px;
	font-weight: 200;
}

#get-involved {
	background-color: #f1eeec;
}

#get-involved h2, h3{
	font-family: 'BrandonGrotesqueBold', courier, sans-serif;
}

footer{
	background-color: #e74c3c;
	font-family: 'BrandonGrotesqueMed',Helvetica, sans-serif;
	color: white;
 	text-align: center;
    padding: 50px 0;
    font-size: 18px;
    width: 100%
}

#who-we-are{
	padding-top: 0px;
}

#who-we-are h2, .sectionTitles h2{
	font-family: 'BrandonGrotesqueBold', courier, sans-serif;
}

#who-we-are #me-desc{
    padding: 0 150px 0 150px;
}

#go-to-top-btn a{
	background-color: #e74c3c;
	border-color: #e74c3c;
	padding-left: 80px;
}

#go-to-top-btn a:hover{
	background-color: #e74c3c;
	opacity: 1;
	border-color: #e74c3c;
}

#forms{
  padding-top: 50px;
  padding-left: 100px;
  margin-top: 50px;
}
#forms p{
    font-size: x-large;
    padding-bottom: 10px;
}

#forms .input-group{
    padding-bottom: 10px;
}

#forms .btn-default{
  color: black;
  font-family: 'Arvo', courier, sans-serif;
  margin-top: 10px;
  margin-bottom: 110px;
}

#quadcopterinfo h3{
  padding-top: 5px;
}

#cudroneinfo h3{
  padding-top: 13px;
}

#cudroneinfo p, #quadcopterinfo p{
  padding-top: 15px;
}

#colormatchinfo a{
  margin-top: 30px;
}

#right_desc{
    padding-left: 0px;
    padding-top: 50px;
    padding-right: 100px;
}
#myrole{
    padding:0;
}
#contact_banner p, #who-we-are p, #colormatchinfo p, #cudroneinfo p, #quadcopterinfo p{
    font-family: 'BrandonGrotesqueLight', courier, sans-serif;
}

.contact{
    font-size: large;
}

.contact a{
  text-decoration: none;
}

.contact a:hover{
  opacity:0.5;
}

.contact #google{
  color:#dd4b39;
}

.contact #github{
  color:#000000;
}

.contact #linkedin{
  color: #007bb5;
}

#links{
    padding-top: 30px;
    margin-left:-70px;
}

#formAlert{
    max-width: 1095px;
    margin-left: 180px;
    margin-top: 50px;
    text-align: center;
}

#glypcninputMessage, #glypcninputEmail, #glypcninputName{
    margin-right: 110px;
}
#glypcnhuman{
    margin-right: 0;
}

#contactme{
    padding:0px 0 150px 0px;
    background-color: #f5f5f5;
    width:100%;
}

#alertContainer{
    background-color: #f5f5f5;
    width: 100%;
    height:110px;
}

#successMessage{
    padding-top: 250px;
}

.headers {
    margin:0 0 50px 100px;
    font-size: -webkit-xxx-large;
    font-weight: 900;
}

.sectionTitles{
    padding-left: 150px;
    padding-top: 50px;
}

.sectionTitles p{
    font-size: 17px;
}

.sectionTitles h3{
    font-family: 'BrandonGrotesqueMed', courier, sans-serif;
}

#carousel1 h3, #carousel2 h3,  #carousel3 h3{
    font-family: 'BrandonGrotesqueMed', Helvetica, sans-serif;
}
#projectline{
    border-color: #706f70;
	width: 160px;
	margin-bottom: 30px;
}

#colormatchdemo{
    margin-left: 175px;
    padding-top: 70px;
    width: 65%;
}

#prudentdemo{
    margin-left: 115px;
    padding-top: 160px;
    width: 80%;
}
#fbvideo{
    padding-top: 50px;
}
#colormatch hr, #prudentcal hr, #cudrone hr, #decode2016 hr{
    border-width: 1px;
    border-color: #e74c3c;
    margin-left: 0;
    margin-right: 0;
    margin-bottom:0;
    width: 80%;
}

#projectDuration{
    margin-left: 40px;
}

.project_desc{
    padding: 50px 50px 50px 50px;
}
.project_desc p{
    padding-top:20px;
    padding-bottom:20px;
}

#cudrone{
    padding-bottom: 20px;
}

#mebackhome{
    width: 480px;
    border-radius: 10px;
    margin-left: 100px;
    position: relative;
    top:20px;
}

#me-desc1{
    padding-left: 0px;
    padding-right: 140px;
}

#me-desc1 p, #me-desc li{
    font-family: 'BrandonGrotesqueLight',Helvetica, sans-serif;
}

#me-desc1 p{
    font-size: 20px;
}

#courses li{
    font-size: 18px;
}
.contactinfo{
    padding-left: 180px;
    padding-top: 30px;
}

.contactinfo a{
    padding-left: 30px;
    position: relative;
    top: -15px;
    left:20px;
}

#google, #github, #linkedin{
    padding-bottom: 20px;
}

.contactlogo a:hover{
    opacity:0.7;
}

#googlelogo, #githublogo, #linkedinlogo{
    font-size: 200px;
}

#logos{
    padding-top: 80px;
}

#logos .col-md-4{
    padding-bottom: 20px;
    text-align:center;
}

#googlelogo{
    padding-left: 250px;
}

#linkedinlogo{
    padding-right:250px;
}

#timeline2 p{
    padding-left: 90px;
}
#timeline3 p{
    padding-left: 60px;
}
#timeline4 p{
    padding-left: 40px;
}
/*
#cudrone{
    padding-top: 50px;
}
*/
#right_pics{
    padding-top: 100px;
}
#right_pics2{
    padding-top: 250px;
}
#right_pics, #right_pics2{
    padding-right: 150px;
    padding-bottom: 30px;
}


#whoamigrid{
    margin-top:20px;
    padding-bottom:20px;
    padding-left: 50px;
}

#me-desc1 a:hover{
    text-decoration: none;
}

@media screen and (max-width: 991px) {
    #googlelogo, #githublogo, #linkedinlogo{
        font-size: 130px;
    }

    #logos{
        padding-top: 20px;
    }

    #logos .col-md-4{
        text-align: center;
        padding-top: 20px;
    }
    .sectionTitles{
        padding-left: 130px;
        padding-top: 50px;
    }
    .project_desc{
        padding: 50px 150px 50px 50px;
    }
    /*
    #timeline p{
        padding-left: 50px;
    }
    #timeline2 p{
        padding-left: 150px;
    }
    #timeline3 p{
        padding-left: 100px;
    }
    */

    #right_desc{
        padding-left: 130px;
        padding-right: 0;
    }
    #colormatchdemo{
        margin-left: 0;
    }

    #colormatch_pics{
        text-align: center;
    }
    #prudentdemo{
        margin-left: 100px;
        width:75%;
    }
    #logos .col-md-4{
        text-align: center;
        padding-bottom: 20px;
    }
    #googlelogo{
        padding-left: 10px;
    }
    #linkedinlogo{
        padding-right: 0;
    }
    #me-desc1{
        padding-top:50px;
    }

    #right_pics, #right_pics2{
        padding-top: 0;
        padding-left: 0;
        padding-right: 0;
    }
}

@media screen and (max-width: 767px) {

	.navbar-header img{
		padding-left: 0px;
	}

    .contactinfo{
        padding-left: 180px;
        padding-top: 30px;
    }

    .contactinfo a{
        padding-left: 30px;
        position: relative;
        top: -15px;
        left:20px;
    }

    #googlelogo, #githublogo, #linkedinlogo{
        font-size: 130px;
    }

    #logos{
        padding-top: 20px;
    }

    #logos .col-md-4{
        text-align: center;
        padding-top: 20px;
    }

    #colormatch hr,#prudentcal hr,#cudrone hr{
        width:95%;
    }

    #timeline, #timeline3, #timeline3 p, #timeline4 p, #timeline4{
        padding-left: 0px;
    }

    #prudent_pics{
        padding:0;
    }
    #prudentdemo{
        margin-left: 50px;
        padding-top:50px;
    }
    #colormatchdemo{
        padding-top: 20px;
        margin-left: 0;
    }

    #colormatch, #quadcopter, #cudrone{
        padding-top: 0;
    }

    #logos .col-md-4{
        text-align: center;
        padding-bottom: 20px;
    }

    #googlelogo{
        padding-left: 10px;
    }
    #linkedinlogo{
        padding-right: 0;
    }
    #carletonlogo{
        width:100%;
    }
    #who-we-are #me-desc{
        padding: 0 40px 0 40px;
    }
    #get-involved .col-md-4{
        padding-bottom: 50px;
    }

    #mebackhome{
        width: 80%;
        position: relative;
        top:20px;
        margin-left: 0;
    }

    #me-desc1{
        padding: 50px 50px 0 50px;
    }

    #me-desc1 p{
        font-size: 20px;
    }

    #whoamigrid{
        margin-top:20px;
        padding-bottom:20px;
        padding-left: 0;
    }

    #whoamipic{
        text-align: center;
        padding-left: 0;
        padding-right: 0;
    }
    .project_desc{
        padding: 50px;
    }

    #fbvideo{
        width:80%;
        padding-top: 50px;
        margin-left: 40px;
    }

    #carousel1, #carousel2, #carousel3{
        margin: 0;
    }

    #right_pics,#right_pics2 {
        padding-top: 0;
        padding-left: 0;
        padding-right: 0;
    }

    #right_desc, .sectionTitles{
        padding: 20px;
    }

}

